BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/EM_Event_Speaker_vod__c.object
<CustomObject>
    <description>Service Provider at an Activity for Veeva Event Management.</description>
    <fields>
        <fullName>AATemplateID_HCPTS__c</fullName>
        <formula>IF( 
NOT(ISBLANK( Event_Speaker_Contract_HCPTS__r.Non_standard_Contract_Template_HCPTS__c )),
Event_Speaker_Contract_HCPTS__r.Non_standard_Contract_Template_HCPTS__c,

CASE(Service_Type_HCPTS__c, &apos;Services&apos;, &apos;a4zZ00000000tUH&apos;, &apos;Sponsorship&apos;, &apos;a4zZ000000013J0&apos;,&apos;Events&apos;,&apos;a4zZ000000013J5&apos;,&apos;&apos;)

)</formula>
        <label>AATemplateID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <formula>CASESAFEID(Speaker_vod__r.Account_vod__c)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Name_HCPTS__c</fullName>
        <formula>Event_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Product_HCPTS__c</fullName>
        <formula>Event_vod__r.Product_HCPTS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Service_Type_HCPTS__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairperson / Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congress Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer / Educator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Type_HCPTS__c</fullName>
        <formula>Event_vod__r.Activity_Type_Formula_HCPTS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Terms_HCPTS__c</fullName>
        <description>Additional Terms and Conditions</description>
        <label>Additional Terms and Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Payment for travel time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duration of Confidentiality - 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duration of Confidentiality - 7 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS Rights to Recording of Consultant</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ariba_SOW_Number_HCPTS__c</fullName>
        <description>Ariba SOW Number for this Activity Service Provider</description>
        <inlineHelpText>Ariba SOW Number for this Activity Service Provider</inlineHelpText>
        <label>Ariba SOW Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Status_HCPTS__c</fullName>
        <description>Attendance Status of the speaker for the event.</description>
        <label>Attendance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Did not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended In Person</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Attended Virtually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_Generate_Contract__c</fullName>
        <description>This field will be used to keep track of the ability to generate a contract on the Activity Speaker. Validation rules will fire when this is changed to true, and return errors if there are unmet requirements. Contracts cannot be generated in Conga if this field is set to false.</description>
        <label>Can Generate Contract</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_HCPTS__c</fullName>
        <formula>Speaker_vod__r.City_HCPTS__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaCurrencyCulture_HCPTS__c</fullName>
        <description>Currency culture used in Conga Button url..should be hidden from end users normally</description>
        <formula>TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c)</formula>
        <inlineHelpText>Currency culture used in Conga Button url..should be hidden from end users normally</inlineHelpText>
        <label>Conga Currency Culture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractTemplateId_HCPTS__c</fullName>
        <description>FINAL TEMPLATE SELECTOR FORMULA AS INPUT TO CONGA</description>
        <formula>FWTemplateId_HCPTS__c &amp; IF(NOT(ISBLANK(FWTemplateId_HCPTS__c)),  &apos;,&apos;, &apos;&apos;)  &amp; AATemplateID_HCPTS__c</formula>
        <inlineHelpText>FINAL TEMPLATE SELECTOR FORMULA AS INPUT TO CONGA</inlineHelpText>
        <label>ContractTemplateId to Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractTemplateId_to_Download_HCPTS__c</fullName>
        <description>Contract Template Id formula field used by the Download Conga button on Activity Speaker object</description>
        <formula>FWTemplateId_For_Download_HCPTS__c &amp; IF(NOT(ISBLANK(FWTemplateId_For_Download_HCPTS__c )), &apos;,&apos;, &apos;&apos;) &amp; AATemplateID_HCPTS__c</formula>
        <inlineHelpText>Contract Template Id formula field used by the Download Conga button on Activity Speaker object</inlineHelpText>
        <label>ContractTemplateId to Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Format_HCPTS__c</fullName>
        <description>These values apply to Services Contracts. If Short-term is chosen, only a SOW/Activity Agreement is applicable. Long-term contracts will have an SOW AND an MSA/Framework agreement</description>
        <inlineHelpText>These values apply to Services Contracts. If Short-term is chosen, only a SOW/Activity Agreement is applicable. Long-term contracts will have an SOW AND an MSA/Framework agreement</inlineHelpText>
        <label>Contract Format</label>
        <picklist>
            <picklistValues>
                <fullName>Long-term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short-term</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Language_HCPTS__c</fullName>
        <description>Defaults to Speaker&apos;s language if available</description>
        <inlineHelpText>Defaults to Speaker&apos;s language if available</inlineHelpText>
        <label>Contract Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl_NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Lead_Time_HCPTS__c</fullName>
        <formula>IF(
  ISPICKVAL(Event_Speaker_Contract_HCPTS__r.Status_vod__c, &quot;Activated_vod&quot;)

  ,

  TEXT(DATEVALUE(Event_vod__r.Start_Time_vod__c) - DATEVALUE(Event_Speaker_Contract_HCPTS__r.LastModifiedDate))

  ,

  &quot;Contract Not Activated&quot;
)</formula>
        <label>Contract Lead Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Party_HCPTS__c</fullName>
        <description>Name of the Contract Party</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Related_ICF_HCPTS__r.Vendor_HCPTS__c, Related_ICF_HCPTS__r.Vendor_HCPTS__r.Name)</formula>
        <inlineHelpText>Name of the Contract Party derived from the ICF. To update the Contract Party, please update the ICF. If the ICF is locked, you may use Clone ICF to create a copy and then make updates.</inlineHelpText>
        <label>Contract Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to select the contract being applied to a speaker for a particular event for Veeva Event Management.</description>
        <label>zContract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.Speaker_vod__c</field>
                <operation>equals</operation>
                <valueField>Contract_vod__c.Speaker_HCPTS__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Signed</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipName>Event_Speakers_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_HCPTS__c</fullName>
        <formula>Speaker_vod__r.Country_HCPTS__c</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_HCTPS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+CreatedById, CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(DAY(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(CreatedDate )))</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>Event Speaker Credentials. This value is pulled in from the Credentials_vod field on Speaker record.</description>
        <formula>Text(Speaker_vod__r.Credentials_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credentials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESVisible_HCPTS__c</fullName>
        <description>ESVisible = 1, Echosign send option is available, else not</description>
        <formula>IF( 
OR( TEXT(Speaker_Contract_HCPTS__r.Status_vod__c) =  &apos;Activated_vod&apos;,
    TEXT(Event_Speaker_Contract_HCPTS__r.Status_vod__c) = &apos;Activated_vod&apos;
  ) , 
 &apos;0&apos;, &apos;1&apos;)</formula>
        <inlineHelpText>ESVisible = 1, Echosign send option is available, else not</inlineHelpText>
        <label>ESVisible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Echosign_Template_Id_HCPTS__c</fullName>
        <formula>IF(

AND (
NOT(ISBLANK( Signer_1_Email_HCPTS__c)),  NOT(ISBLANK( Employer_Email_HCPTS__c))
)
,$Setup.Conga_and_Echosign_Ids__c.EventSpeakerTemplate_ServicesCon2Signer__c,  $Setup.Conga_and_Echosign_Ids__c.EventSpeakerTemplate_ServicesContracting__c 

)</formula>
        <label>Echosign Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_HCPTS__c</fullName>
        <formula>Speaker_vod__r.Email_HCPTS__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Consent_Required_HCPTS__c</fullName>
        <description>Yes indicates that this Attendee requires Employer Consent.</description>
        <inlineHelpText>Yes indicates that this Attendee requires Employer Consent.</inlineHelpText>
        <label>Employer Consent Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer_Consent_Status_HCPTS__c</fullName>
        <description>Specify status of EC capture stage/step</description>
        <inlineHelpText>Specify status of EC capture stage/step</inlineHelpText>
        <label>Employer Consent Status</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Signature</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer_Email_HCPTS__c</fullName>
        <description>Employer Email</description>
        <inlineHelpText>Employer Email</inlineHelpText>
        <label>Entity Signatory Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Name_HCPTS__c</fullName>
        <description>Name of Employer hand typed by the user</description>
        <inlineHelpText>Name of Employer hand typed by the user</inlineHelpText>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Signatory_Name_HCPTS__c</fullName>
        <description>Employer signatory</description>
        <inlineHelpText>Employer signatory</inlineHelpText>
        <label>Entity Signatory Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Signatory_Title_HCPTS__c</fullName>
        <description>Signatory Title</description>
        <inlineHelpText>Signatory Title</inlineHelpText>
        <label>Entity Signatory Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_HCPTS__c</fullName>
        <description>Service End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_vod__c</fullName>
        <description>End time of the event</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>ID of object associated with the attendee such as an account.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Speaker_Contract_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to select the contract being applied to a speaker for a particular event for Veeva Event Management.</description>
        <label>Activity Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Speaker_vod__c</field>
                <operation>equals</operation>
                <valueField>Contract_vod__c.Speaker_HCPTS__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Activated</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Expired_vod__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Type_HCPTS__c</field>
                <operation>equals</operation>
                <valueField>Contract_vod__c.Service_Type_HCPTS__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Framework Agreement</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Subtype_HCPTS__c</field>
                <operation>equals</operation>
                <valueField>Contract_vod__c.Service_Subtype_HCPTS__c</valueField>
            </filterItems>
            <infoMessage>Only Signed unexpired Activity Agreements for the Speaker matching in Contract type and Subtype are selectable from this screen</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipName>Event_Speakers_HCPTS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event which the speaker is speaking at.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Event Service Providers</relationshipLabel>
        <relationshipName>EM_Event_Speaker_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSpecialty_HCPTS__c</fullName>
        <formula>Speaker_vod__r.Specialty_1_vod_HCPTS__c</formula>
        <label>Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FWTemplateId_For_Download_HCPTS__c</fullName>
        <description>Template Id formula field used by the Download Conga button on Activity Speaker object</description>
        <formula>IF( 
NOT(ISBLANK( Speaker_Contract_HCPTS__r.Non_standard_Contract_Template_HCPTS__c )), 
Speaker_Contract_HCPTS__r.Non_standard_Contract_Template_HCPTS__c, 

IF( 
        TEXT(Service_Type_HCPTS__c) = &apos;Services&apos; 
, 
CASE( Speaker_vod__r.Country_HCPTS__c , 
&apos;UK&apos;, &apos;a4zZ00000000tUM&apos;, 
&apos;Spain&apos;, &apos;a4zZ000000013YV&apos;, 
&apos;&apos;) 
, 
&apos;&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Template Id formula field used by the Download Conga button on Activity Speaker object</inlineHelpText>
        <label>FWTemplateId For Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FWTemplateId_HCPTS__c</fullName>
        <description>Framework Agreement template ID formula for Input to Conga</description>
        <formula>IF( 
NOT(ISBLANK( Speaker_Contract_HCPTS__r.Non_standard_Contract_Template_HCPTS__c )),
Speaker_Contract_HCPTS__r.Non_standard_Contract_Template_HCPTS__c,

IF( AND
 (TEXT(Service_Type_HCPTS__c) = &apos;Services&apos;,
NOT(ISPICKVAL(Speaker_Contract_HCPTS__r.Status_vod__c,&apos;Activated_vod&apos;))
)
,

CASE( Speaker_vod__r.Country_HCPTS__c , 
     &apos;UK&apos;, &apos;a4zZ00000000tUM&apos;, 
     &apos;Spain&apos;, &apos;a4zZ000000013YV&apos;,
      &apos;&apos;)
,
&apos;&apos;)
)</formula>
        <inlineHelpText>Framework Agreement template ID formula for Input to Conga</inlineHelpText>
        <label>FWTemplateId For Generation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_vod__c</fullName>
        <description>Event Speaker First Name. This value is pulled in from the First_Name_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.First_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Employer_Sign_Table_HCPTS__c</fullName>
        <description>If checked, Employer Signature table is shown in the Contract</description>
        <formula>ISBLANK(Employer_Name_HCPTS__c)</formula>
        <inlineHelpText>If checked, Employer Signature table is shown in the Contract</inlineHelpText>
        <label>Hide Employer Sign Table in Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Approved_to_Contract_HCPTS__c</fullName>
        <description>This field indicates whether the criteria are set to successfully contract with this person. For Services, ICF Must be signed and FWA and AA fields must not be empty. For Sponsorship, ICF must be signed and AA field must not be empty. For Activities, ICF must be Signed Manually and AA must not be empty</description>
        <formula>CASE( 0,

IF
(

AND( 
  ISPICKVAL(Service_Type_HCPTS__c,&apos;Services&apos;),
  OR(ISPICKVAL(Service_Subtype_HCPTS__c,&apos;&apos;),  
     AND(TEXT(Related_ICF_HCPTS__r.Status_HCPTS__c) &lt;&gt;        &apos;Signed&apos;,TEXT(Related_ICF_HCPTS__r.Status_HCPTS__c) &lt;&gt; &apos;Signed Manually&apos;),
     ISBLANK( Speaker_Contract_HCPTS__c ),  
     ISBLANK( Event_Speaker_Contract_HCPTS__c ),
      TEXT(Event_Speaker_Contract_HCPTS__r.Status_vod__c) = &apos;Activated_vod&apos; ,
     TEXT( Event_vod__r.Status_vod__c ) &lt;&gt; &apos;In Planning&apos;,
      Event_Speaker_Contract_HCPTS__r.Start_Date_vod__c &lt;  Speaker_Contract_HCPTS__r.Start_Date_vod__c,
      Event_Speaker_Contract_HCPTS__r.Start_Date_vod__c &gt;  Speaker_Contract_HCPTS__r.End_Date_vod__c
    )
), 0, 1)  ,

&apos;Not approved - For Services Contracts all of the following conditions must be met:&apos; &amp; BR() &amp; &apos;** Related ICF must be in status Signed&apos; &amp; BR() &amp; &apos;** Related Framework and SOW (Activity Agreement) must be populated&apos; &amp; BR() &amp; &apos;** Contract Subtype field must be populated&apos; &amp; BR() &amp; &apos;** Activity must be in In Planning status&apos; &amp; BR() &amp; &apos;** Start Date of SOW cannot be before Start Date of Framework Agreement&apos; &amp; BR() &amp; &apos;** Start Date of SOW cannot be after End date of Framework Agreement&apos; &amp; BR() &amp; &apos;** Activity Agreement must not be already Activated!&apos;,

IF
(

AND( 
  ISPICKVAL(Service_Type_HCPTS__c,&apos;Sponsorship&apos;),
  OR(ISPICKVAL(Service_Subtype_HCPTS__c,&apos;&apos;),  
     AND(TEXT(Related_ICF_HCPTS__r.Status_HCPTS__c) &lt;&gt;        &apos;Signed&apos;,TEXT(Related_ICF_HCPTS__r.Status_HCPTS__c) &lt;&gt; &apos;Signed Manually&apos;),
     TEXT(Event_Speaker_Contract_HCPTS__r.Status_vod__c) = &apos;Activated_vod&apos; ,
     ISBLANK( Event_Speaker_Contract_HCPTS__c ),
     TEXT( Event_vod__r.Status_vod__c ) &lt;&gt; &apos;In Planning&apos;
    )
), 0, 1)  ,
&apos;Not approved - For Sponsorship Contracts all of the following conditions must be met: &apos; &amp; BR() &amp; &apos;** Related ICF must be in status Signed&apos; &amp; BR() &amp; &apos;** Related Activity agreements must be populated&apos; &amp; BR() &amp; &apos;** Contract Subtype field must be populated&apos; &amp; BR() &amp; &apos;** Activity must be in In Planning status&apos; &amp; BR() &amp; &apos;** Activity Agreement must not be already Activated!&apos;,

IF
(
AND( 
  ISPICKVAL(Service_Type_HCPTS__c,&apos;Events&apos;),
  OR(ISPICKVAL(Service_Subtype_HCPTS__c,&apos;&apos;),  
     AND(TEXT(Related_ICF_HCPTS__r.Status_HCPTS__c) &lt;&gt;        &apos;Signed&apos;,TEXT(Related_ICF_HCPTS__r.Status_HCPTS__c) &lt;&gt; &apos;Signed Manually&apos;),
     TEXT(Event_Speaker_Contract_HCPTS__r.Status_vod__c) = &apos;Activated_vod&apos; ,
     ISBLANK( Event_Speaker_Contract_HCPTS__c ),
     TEXT( Event_vod__r.Status_vod__c ) &lt;&gt; &apos;In Planning&apos;
    )
), 0, 1)  ,
&apos;Not approved - For Events Contracts all of the following conditions must be met:&apos; &amp; BR() &amp; &apos;** Related ICF must be in status Signed or Signed Manually&apos; &amp; BR() &amp; &apos;**  Related Activity agreement must be populated&apos; &amp; BR() &amp; &apos;** Contract Subtype field must be populated&apos; &amp; BR() &amp; &apos;** Event must be in In Planning status&apos; &amp; BR() &amp; &apos;** Activity Agreement must not be already Activated!&apos;,



&apos;APPROVED&apos;)</formula>
        <inlineHelpText>This field indicates whether the criteria are set to successfully contract with this person. Key criteria is Related ICF must be in Signed or Signed Manually status</inlineHelpText>
        <label>Approved to Generate Contract?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_HCPTS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+LastModifiedById, LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(DAY(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_vod__c</fullName>
        <description>Event Speaker Last Name. This value is pulled in from the Last_Name_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Last_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_ID__c</fullName>
        <formula>Speaker_vod__r.BP_ID_BMS_CORE_HCPTS__c</formula>
        <label>Master ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Hours_HCPTS__c</fullName>
        <description>Maximum number of hours for Activity</description>
        <label>Max Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meal_Opt_In_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if a speaker has opted in to receiving a meal.</description>
        <label>Meal Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meal_Preference_vod__c</fullName>
        <description>Meal preference of a speaker. Custom values can be added to this picklist.</description>
        <label>Meal Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Vegetarian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name_vod__c</fullName>
        <description>Event Speaker Middle Name. This value is pulled in from the Middle_Name_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Middle_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Middle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nickname_vod__c</fullName>
        <description>Event Speaker Nickname. This value is pulled in from the Nickname_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Nickname_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nickname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Signers_HCPTS__c</fullName>
        <label>Number of Signers</label>
        <summaryForeignKey>Contract_Signer_HCPTS__c.Activity_Service_Provider__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_HCPTS__c</fullName>
        <formula>Speaker_vod__r.Phone_HCPTS__c</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_vod__c</fullName>
        <description>Position of an event speaker</description>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language_HCPTS__c</fullName>
        <formula>TEXT(Speaker_vod__r.Preferred_Language_HCPTS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type_Formula_HCPTS__c</fullName>
        <formula>TEXT(Speaker_vod__r.Provider_Type_HCPTS__c)</formula>
        <label>Legacy Provider Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type_HCPTS__c</fullName>
        <label>Legacy Provider Type</label>
        <picklist>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Advocacy Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technicians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider_Type_Simple_HCPTS__c</fullName>
        <description>Provider type value from the Service Provider Lookup</description>
        <formula>Speaker_vod__r.Provider_Type_Simple_Formula_HCPTS__c</formula>
        <inlineHelpText>Provider type value from the Service Provider Lookup</inlineHelpText>
        <label>Provider Type</label>
        <type>Text</type>
    </fields>
</CustomObject>